# sudoku

./: .eslintignore  .gitignore  LICENSE  README.md  build.sh  index.0410146b.css  index.0410146b.css.map  index.0514de8c.css  index.0514de8c.css.map  index.07a467b5.js  index.07a467b5.js.map  index.0d2bb0dc.css  index.0d2bb0dc.css.map  index.13919c5d.js  index.13919c5d.js.map  index.1995443a.css  index.1995443a.css.map  index.1a8654b3.js  index.1a8654b3.js.map  index.1d555808.js  index.1d555808.js.map  index.297cf319.js  index.297cf319.js.map  index.42eb7006.js  index.42eb7006.js.map  index.46c80619.js  index.46c80619.js.map  index.4832f00e.js  index.4832f00e.js.map  index.514bd8fd.js  index.514bd8fd.js.map  index.56d3be95.js  index.56d3be95.js.map  index.58cf43f7.css  index.58cf43f7.css.map  index.6b448418.css  index.6b448418.css.map  index.737024df.css  index.737024df.css.map  index.7a51a67d.js  (+50 more)
assets/: generate_icon.html
scss/: app.scss  palettes.scss
src/: board_ui.ts  game.ts  game_controller.ts  main.ts  resolve.ts  solve.ts  theme.ts  types.test.ts  types.ts
wasm/: .gitignore  Cargo.toml
wasm/benches/: sudoku.rs
wasm/src/: core.rs  fast_solver.rs  generate.rs  generator.rs  lib.rs  scorer.rs  solve.rs  solve_utils.rs  solver.rs  strategy_solver.rs
