[package]
name = "sudoku-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
web-time = "1.1.0"
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sudoku"
harness = false
